--- a/sonarcloud.yml
+++ b/sonarcloud.yml
@@ -1,4 +1,5 @@
 name: SonarCloud
+
 on:
   push:
     branches:
@@ -24,7 +25,7 @@ jobs:
       - name: Run SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
-          organization: alexramirez02  # 👈 Tu organización de SonarCloud
-          projectKey: GitHubCodeFactory-EP17-InnoSistemas-Feature-5-Backend-  # 👈 Tu proyecto exacto en SonarCloud
+          organization: alexramirez02
+          projectKey: alexramirez02_CodeFactory-EP17-InnoSistemas-Feature-5-Backend-
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
